# marover

./: README.md  run.sh
docs/: Building.md  ESP32-Flashing.md  PS3Joystick.md  circuit.dot  devices.md  resources.md
docs/datasheet/proto/: CRSFProtocol.md
model/: GoPro_Connection.scad  Makefile  active_wheel.scad  active_wheel.stl  active_wheel_mkii.scad  components.scadl  lib.scad  rover.scad  rover.stl  rover_body.scad  rover_body.stl  rover_bottom.scad  rover_bottom.stl  rover_cover.scad  rover_cover.stl  rover_top.scad  rover_top.stl  speedrover.scad  tire.stl
model/sliced/dreamer/: rover_body.gx  rover_bottom.gx
model/sv_tank/: PLA_sv_wheels_active.stl  TPU_sv_track1.stl
platformio/playground/: Upload FS.md  littlefsbuilder.py  mklittlefs  platformio.ini  readme.md
platformio/playground/data/: index.html  ws.js
platformio/playground/data/admin/: index.html  logout.html  reboot.html
platformio/playground/src/CameraWebServer/: CameraWebServer.ino
platformio/playground/src/async_stream/: output_video_async.cpp
platformio/quickjs/: Makefile  ioctl.c
platformio/servo/: .gitignore  Dockerfile  joint_state.xml
platformio/servo/.devcontainer/: devcontainer.json
platformio/servo/device_kit/: CMakeCache.txt  CMakeLists.txt  README.md
platformio/servo/device_kit/example/: Ads1115Printer.cpp  CMakeLists.txt
platformio/servo/device_kit/include/bus_io/: File.hpp  I2cSlave.hpp
platformio/servo/device_kit/include/device_kit/: Ads1115.hpp  As5600.hpp  Pca9685.hpp
platformio/servo/device_kit/src/: Ads1115.cpp  As5600.cpp  Pca9685.cpp
platformio/servo/servo/: CMakeLists.txt  package.xml
platformio/servo/servo/launch/: position_regulator.launch.py
platformio/servo/servo/src/: Drive.cpp  Drive.hpp  KalmanFilter.hpp  PidController.hpp  PositionRegulatorAds1115.cpp  PositionRegulatorAds1115.hpp  PositionRegulatorAs5600.cpp  PositionRegulatorAs5600.hpp  Trsm.hpp  UpLo.hpp
platformio/servo/servo_msgs/: CMakeLists.txt  package.xml
platformio/servo/servo_msgs/msg/: As5600Angle.msg  DutyCycle.msg  MagneticSensorStatus.msg
platformio/servo/servo_py/: package.xml  setup.cfg  setup.py
platformio/servo/shell/: .bashrc  .zshrc  robbyrussell.zsh-theme
src/: bdf2.js  font.bdf  modes.js  util.js
src/control/drive/: hbridge.js  relay.js
src/control/osd/: ScrollPane.js
src/drivers/: i2c.js
src/drivers/adc/: ADS1115.js
src/drivers/i2c/: AS5600.js  PCF8574.js  SSD1306.js
src/drivers/osd/: SH1106.js
src/drivers/pwm/: PCA9685.js
src/fonts/: CourierBR8.json  CourierMO8.json  CourierMR8.json  FixedBR15.json  FixedMR8.json  HelveticaBR14.json  HelveticaBR8.json  HelveticaMR10.json  HelveticaMR12.json  HelveticaMR14.json  HelveticaMR8.json  LucidaMR14.json  LucidaMR8.json  SijiMR10.json  TimesBR14.json  TimesMR14.json  TimesMR8.json  sm4tikMR16.json
src/fonts/MediumR/: Schoolbook.json
src/fonts/reduced/: CourierBR8.json  CourierMO8.json  CourierMR8.json  HelveticaBR8.json  HelveticaMR10.json  HelveticaMR12.json  HelveticaMR14.json  HelveticaMR24.json  HelveticaMR8.json  TerminusBR12.json  TerminusBR16.json  TerminusBR24.json  TerminusBR32.json  TerminusMR12.json  TerminusMR16.json  TerminusMR24.json  TerminusMR32.json  TimesBR14.json  TimesMR14.json  TimesMR24.json  TimesMR8.json  sm4tikMR16.json
src/frame/: marover.js
src/proto/: crsf.js  sbus.js
src/service/: time.js
test/: test_as5600.js  test_crsf.js  test_ioctl.js  test_pca9685.js  test_sbus.js  test_ssd1306.js
tools/: bdf2.js  crsf_dump.js  win2uni  win2uni.in
tools/SixPair/: Makefile  sixpair.linux
(+50 files in other folders)
